Added all pokemon to pokedex

--- a/pokeFrontend/src/App.css
+++ b/pokeFrontend/src/App.css
@@ -57,7 +57,7 @@ h1 {
 body {
     /* background-color: #2a2f32; Org färg */
     background-color: #121212;
-    background-image: url(../public/assets/wp2528663-dark-type-pokemon-wallpapers.jpg);
+    /* background-image: url(../public/assets/wp2528663-dark-type-pokemon-wallpapers.jpg); */
     /* background-image: url(../public/assets/pxfuel.jpg); */
 
 
