--- a/pokeFrontend/src/App.css
+++ b/pokeFrontend/src/App.css
@@ -8,7 +8,7 @@
     height: 100%;
     margin: 0 auto;
     position: relative;
-
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     /* align-items: center;
