--- a/pokeFrontend/src/App.css
+++ b/pokeFrontend/src/App.css
@@ -82,9 +82,6 @@ body {
 
 .extra-info {
     padding-left: 1rem;
-
-
-
 }
 
 .pokeDex {
@@ -104,10 +101,39 @@ h5 {
     color: rgb(42, 42, 71);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 784px) {
     .main-content {
         width: 100%;
         height: 100%;
         margin-bottom: auto;
+    }
+
+
+}
+
+@media (max-width: 962px) {
+    .d-flex {
+
+        min-height: auto;
+        flex-wrap: wrap;
+        order: 1;
+    }
+
+
+    .small-card {
+        min-height: auto;
+        flex-wrap: wrap;
+        order: 2;
+        margin-bottom: 10%;
+    }
+
+    .extra-info {
+        min-height: auto;
+        flex-wrap: wrap;
+    }
+
+    .desc {
+        min-height: auto;
+        flex-wrap: wrap;
     }
 }
