--- a/pokeFrontend/src/App.css
+++ b/pokeFrontend/src/App.css
@@ -73,6 +73,7 @@ body {
     margin-right: 2rem;
     border-radius: 15px;
     background-color: #c1e6e3;
+
 }
 
 .small-card-weakness {
@@ -82,6 +83,7 @@ body {
 
 .extra-info {
     padding-left: 1rem;
+
 }
 
 .pokeDex {
@@ -99,6 +101,36 @@ body {
 
 h5 {
     color: rgb(42, 42, 71);
+}
+
+.abilityButton {
+    background-color: transparent;
+    color: rgb(42, 42, 71);
+    border-width: 0;
+    font-family: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+    padding: 0;
+    margin-right: 1rem;
+    margin-left: auto;
+    text-align: left;
+
+}
+
+.abilityButton:hover {
+    background-color: #c1e6e3;
+    border-width: 0;
+    font-family: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+    transform: scale(1.01);
+    /* text-decoration: underline; */
+    margin-right: 1rem;
+    margin-left: auto;
 }
 
 @media (max-width: 784px) {
